name:                yesod-job-queue
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/yesod-job-queue#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files: app/dist/index.html
cabal-version:       >=1.10

library
  -- hs-source-dirs:      src
  exposed-modules:     Yesod.JobQueue
                     , Yesod.JobQueue.APIData
                     , Yesod.JobQueue.Routes
  default-extensions:  TemplateHaskell
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , QuasiQuotes
                     , TypeFamilies
                     , OverloadedStrings
                     , FlexibleContexts
  build-depends:       base >= 4.7 && < 5
                     , stm
                     , hedis
                     , uuid
                     , aeson
                     , cron
                     , monad-logger
                     , bytestring
                     , lens
                     , classy-prelude-yesod
                     , api-field-json-th
                     , yesod
                     , file-embed
  default-language:    Haskell2010

test-suite yesod-job-queue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yesod-job-queue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/yesod-job-queue
