name:                yesod-job-queue
version:             0.4.0.0
synopsis:            Background jobs library for Yesod.
description:
  Background jobs library for Yesod
  .
  * It contains management API and web interface.
  * Queue backend is Redis.
  * Support cron scheduler
  .
  Usage and screen shot are available in README.md

homepage:            https://github.com/nakaji-dayo/yesod-job-queue#readme
license:             BSD3
license-file:        LICENSE
author:              Daishi Nakajima
maintainer:          nakaji.dayo@gmail.com
copyright:           2016 Daishi Nakajima
category:            Web
build-type:          Custom
extra-source-files:  README.md
                     app/dist/app.bundle.js
                     doc/yesod-job-queue-ss.png
cabal-version:       >=1.24

flag example
  description: Build the example application
  default: False

custom-setup
  setup-depends:       base >= 4.7 && < 5
                     , directory >= 1.3.6 && < 1.4
                     , process >= 1.6.9 && < 1.7
                     , Cabal >= 3.2.1


library
  exposed-modules:     Yesod.JobQueue
                     , Yesod.JobQueue.GenericConstr
                     , Yesod.JobQueue.Routes
                     , Yesod.JobQueue.Scheduler
                     , Yesod.JobQueue.Types
  default-extensions:  FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , KindSignatures
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeOperators
                     , TypeSynonymInstances
                     , ViewPatterns
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.6 && < 1.6
                     , api-field-json-th >= 0.1
                     , bytestring
                     , cron >= 0.6.0 && < 0.8
                     , file-embed
                     , hedis
                     , lens
                     , monad-logger
                     , stm
                     , text
                     , time
                     , transformers
                     , unliftio-core >= 0.1.2.0 && < 0.3
                     , uuid
                     , yesod >= 1.6 && < 1.7
                     , yesod-core >= 1.6 && < 1.7
                     , yesod-persistent >= 1.6 && < 1.7

  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

executable          yesod-job-queue-example
  if flag(example)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      example
  main-is:          Main.hs
  default-extensions:  TemplateHaskell
                     , QuasiQuotes
                     , OverloadedStrings
                     , TypeFamilies
                     , GADTs
                     , MultiParamTypeClasses
                     , EmptyDataDecls
                     , GeneralizedNewtypeDeriving
                     , DeriveGeneric
--  other-modules:
  ghc-options:      -Wall -fwarn-tabs

  build-depends:  base >= 4.7 && < 5
                , yesod
                , yesod-core
                , yesod-job-queue
                , persistent-sqlite
                , resourcet
                , monad-logger
                , classy-prelude-yesod
                , hedis

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite yesod-job-queue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yesod-job-queue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nakaji-dayo/yesod-job-queue
